+ V2 + Recomendacion de contraseñas

--- a/skyfolk/static/sass/miperfil.sass
+++ b/skyfolk/static/sass/miperfil.sass
@@ -18,7 +18,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   margin: 0
   padding: 0
   border: 0
-  font-size: 100%
   font: inherit
   vertical-align: baseline
 article,aside,details,figcaption,figure,footer,header,menu,nav,section
@@ -30,7 +29,6 @@ ol,ul
 blockquote,q
   quotes: none
 blockquote:before,blockquote:after,q:before,q:after
-  content: ''
   content: none
 table
   border-collapse: collapse
@@ -518,7 +516,7 @@ body > .container
 
 @media only screen and (max-width: 500px)
   .caja
-    left: 0%
+    left: 0
 
 /* Posicionamiento default */
 .caja
@@ -759,7 +757,6 @@ body > .container
 .video-player .controls button
   color: #212121
   margin: 0
-  padding: 0
   border: 0
   padding: 0.75em 1em
   background: none
@@ -874,9 +871,9 @@ body > .container
   border-top-left-radius: 25px
   border-bottom-left-radius: 25px
   z-index: 9998
-  -webkit-box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.75)
-  -moz-box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.75)
-  box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.75)
+  -webkit-box-shadow: 0 0 1px 0 rgba(50, 50, 50, 0.75)
+  -moz-box-shadow: 0 0 1px 0 rgba(50, 50, 50, 0.75)
+  box-shadow: 0 0 1px 0 rgba(50, 50, 50, 0.75)
 .follower-tab
   position: relative
   height: 50px
@@ -942,7 +939,7 @@ body > .container
   text-decoration: none
 .add-sug
   width: 80px
-  padding: 0px 0px 0px 0px
+  padding: 0 0 0 0
   height: 30px
   color: #000
   background-color: #f5f5f5
@@ -1142,9 +1139,9 @@ a:hover
   border-top-right-radius: 5px
   width: 95%
   color: #1e88e5
-  -webkit-box-shadow: 0px 0px 3px 1px #1e88e5
-  -moz-box-shadow: 0px 0px 3px 1px #1e88e5
-  box-shadow: 0px 0px 3px 1px #1e88e5
+  -webkit-box-shadow: 0 0 3px 1px #1e88e5
+  -moz-box-shadow: 0 0 3px 1px #1e88e5
+  box-shadow: 0 0 3px 1px #1e88e5
 
 #tab-amigos ul.list li img
   width: 72px
@@ -1164,7 +1161,7 @@ a:hover
   letter-spacing: 1px
   word-spacing: 2px
   text-align: center
-  margin-left: 0px
+  margin-left: 0
   width: 100%
 
 #tab-amigos ul.list li a:hover
