--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -139,7 +139,7 @@ form {
   font-width: 100;
   left: 30px; }
 
-/* Estilos para el bot├│n ┬┐olvido su contrase├▒a? */
+/* Estilos para el botón ¿olvido su contraseña? */
 .forgot_pswd {
   position: absolute;
   display: block;
@@ -218,7 +218,7 @@ form {
   font-weight: 100;
   font-family: "Open Sans", sans-serif; }
 
-/* Muestra los mensajes de error, por ejemplo -> "Contrase├▒a incorrecta en los forms" */
+/* Muestra los mensajes de error, por ejemplo -> "Contraseña incorrecta en los forms" */
 .errorlist li {
   color: #f44336;
   display: inline-block;
@@ -242,7 +242,6 @@ form {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   display: block;
   padding: 0 0 30px;
-  z-index: 9999;
   margin-bottom: 5%; }
   .block-formregister #sign_in_register, .block-formregister #sign_up_register {
     position: relative;
@@ -250,12 +249,26 @@ form {
     margin: auto;
     width: 135px;
     margin-left: 7px;
-    margin-top: 3px; }
+    margin-top: 3px;
+    z-index: 0; }
   .block-formregister #iniciar_sesion, .block-formregister #registrar {
     position: relative;
     margin: auto;
     margin-top: -20px;
     display: inline-block; }
+  .block-formregister .reco-passwd {
+    position: absolute;
+    right: 0;
+    margin: 5px 7px 0 0;
+    cursor: pointer;
+    color: #1e88e5; }
+    .block-formregister .reco-passwd:hover {
+      text-shadow: 1px 1px 1px #ccc;
+      transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      -ms-transform: scale(1.1); }
 
 /* Adaptamos el background del login dependiendo de la altura de la pagina */
 @media screen and (min-width: 700px) and (orientation: landscape) {
