--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -254,7 +254,6 @@ form
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
   display: block
   padding: 0 0 30px
-  z-index: 9999
   margin-bottom: 5%
 
   & #sign_in_register, #sign_up_register
@@ -264,6 +263,7 @@ form
     width: 135px
     margin-left: 7px
     margin-top: 3px
+    z-index: 0
 
 
   & #iniciar_sesion, & #registrar
@@ -271,6 +271,22 @@ form
     margin: auto
     margin-top: -20px
     display: inline-block
+
+  & .reco-passwd
+    position: absolute
+    right: 0
+    margin: 5px 7px 0 0
+    cursor: pointer
+    color: $blueskyfolk
+
+    &:hover
+      text-shadow: 1px 1px 1px #ccc
+      transform: scale(1.1)
+      -webkit-transform: scale(1.1)
+      -moz-transform: scale(1.1)
+      -o-transform: scale(1.1)
+      -ms-transform: scale(1.1)
+
 
 
 /* Adaptamos el background del login dependiendo de la altura de la pagina */
