--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -11,7 +11,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" />
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" /> -->
     <link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
