--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -13,10 +13,11 @@
         <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico">
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login-signup.css" />
+        <link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
         <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="{{STATIC_URL}}js/jquery.min.js"></script>
         <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
-        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+
 	{% block extra_head %}
 	{% endblock %}
     </head>
