+ V2 + Mejora carga scripts y reglas de estilos

--- a/skyfolk/templates/about/password_recommendation.html
+++ b/skyfolk/templates/about/password_recommendation.html
@@ -3,13 +3,15 @@
 <head>
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/password_recommendation.css"/>
-    <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
+    <script async type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
     <meta charset="UTF-8">
     <meta name="description" content="Recomendaciones para escoger una buena contraseña.">
     <meta name="keywords" content="Contraseña, Escoger, Fuerte, Robar, Proteger, Privacidad">
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <script async src="{{STATIC_URL}}js/jquery.min.js"></script>
     <title>Consejos para una buena contraseña</title>
+
 </head>
 <body>
     <div class="container">
@@ -57,5 +59,15 @@
             </div>
       </div>
     </div>
+    <div class="back-div" id="return-login">
+      <img class="back-image" src="{{ STATIC_URL }}img/logo.png" title="Volver" alt="Volver" />
+    </div>
+<script>
+    $(document).ready(function() {
+        $('#return-login').on('click', function() {
+            window.location='/';
+        });
+    });
+</script>
 </body>
 </html>
