--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -9,12 +9,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <title>¡Bienvenido a Skyfolk! - Iniciar sesión (pre)</title>
-        <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," />
+        <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," onload="if(media!='all')media='all'">
         <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login-signup.css" />
-        <link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
-        <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" onload="if(media!='all')media='all'">
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login-signup.css" onload="if(media!='all')media='all'">
+        <link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css" onload="if(media!='all')media='all'">
+        <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection" onload="if(media!='all')media='all'">
         <script src="{{STATIC_URL}}js/jquery.min.js"></script>
         <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
 
