--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -66,7 +66,7 @@
 	{% comment %}
 		Para evitar cadenas de texto muy largas (a la hora de mostrar el nombre del fichero)
 	{% endcomment %}
-	<script>
+	<script async>
 		jQuery("a").each(function(i, value) {
 	   var hyperlink = jQuery(value);
 	   var text = hyperlink.text();
