--- a/skyfolk/static/css/password_recommendation.css
+++ b/skyfolk/static/css/password_recommendation.css
@@ -18,4 +18,15 @@ body {
   .container .tip-3 {
     background-color: #1976d2; }
 
+.back-div {
+  position: relative;
+  margin: auto;
+  width: 120px;
+  height: 120px;
+  cursor: pointer; }
+  .back-div .back-image {
+    width: 100%;
+    height: 100%;
+    display: block; }
+
 /*# sourceMappingURL=password_recommendation.css.map */
