--- a/skyfolk/static/sass/password_recommendation.sass
+++ b/skyfolk/static/sass/password_recommendation.sass
@@ -21,3 +21,14 @@ body
     margin-left: 2%
   & .tip-3
     background-color: #1976d2
+
+.back-div
+  position: relative
+  margin: auto
+  width: 120px
+  height: 120px
+  cursor: pointer
+  & .back-image
+    width: 100%
+    height: 100%
+    display: block
