--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -20,7 +20,7 @@
             <!--<input type="checkbox" id="button-menu"  />-->
             {% if user.is_authenticated and user.username != user_profile.username and existFollowRequest == True %}  <!-- si es usuario esta visitando un perfil que no es el suyo -->
             <!-- Cambiamos el icono "+" por "reloj" mientras esperamos que acepte la peticion -->
-            <script type="text/javascript">
+            <script async type="text/javascript">
               $(window).load(function() {
                   $('#addfriend').replaceWith('<span class="fa fa-clock-o" id="follow_request" title="En proceso" onclick=AJAX_remove_request_friend();>'+' '+'</div>');
               });
