--- a/skyfolk/templates/account/cf-relations.html
+++ b/skyfolk/templates/account/cf-relations.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" type="text/css" href="im.css" />
-<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href="im.css" onload="if(media!='all')media='all'">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <header>
 <body>
 <header>
