--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -6,11 +6,11 @@
     {% endblock %}
 	<meta charset="utf-8" />
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.css"  media="screen,projection"/>
-    <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
-		<script src="{{STATIC_URL}}js/welcome.js"></script>
+    <script async type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
+    <script async src="{{STATIC_URL}}js/welcome.js"></script>
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/welcome.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 
 
