--- a/skyfolk/templates/account/skyfolk_store.html
+++ b/skyfolk/templates/account/skyfolk_store.html
@@ -10,7 +10,7 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
 
-		<script>
+		<script async>
 			  $(document).ready(function(){
      			 $('.parallax').parallax();
    			 });
