+ V2 + Mejoras en el front

--- a/skyfolk/templates/about/password_recommendation.html
+++ b/skyfolk/templates/about/password_recommendation.html
@@ -59,10 +59,10 @@
             </div>
       </div>
     </div>
-    <div class="back-div" id="return-login">
-      <img class="back-image" src="{{ STATIC_URL }}img/logo.png" title="Volver" alt="Volver" />
+    <div class="back-div">
+      <img class="back-image" id="return-login" src="{{ STATIC_URL }}img/logo.png" title="Volver" alt="Volver" />
     </div>
-<script>
+<script async>
     $(document).ready(function() {
         $('#return-login').on('click', function() {
             window.location='/';
