--- a/skyfolk/templates/about/password_recommendation.html
+++ b/skyfolk/templates/about/password_recommendation.html
@@ -3,13 +3,14 @@
 <head>
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/password_recommendation.css"/>
-    <script async type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
+    <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
     <meta charset="UTF-8">
     <meta name="description" content="Recomendaciones para escoger una buena contraseña.">
     <meta name="keywords" content="Contraseña, Escoger, Fuerte, Robar, Proteger, Privacidad">
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <script async src="{{STATIC_URL}}js/jquery.min.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.min.js"></script>
     <title>Consejos para una buena contraseña</title>
 
 </head>
@@ -62,7 +63,7 @@
     <div class="back-div">
       <img class="back-image" id="return-login" src="{{ STATIC_URL }}img/logo.png" title="Volver" alt="Volver" />
     </div>
-<script async>
+<script>
     $(document).ready(function() {
         $('#return-login').on('click', function() {
             window.location='/';
