--- a/skyfolk/templates/account/tab-timeline.html
+++ b/skyfolk/templates/account/tab-timeline.html
@@ -14,21 +14,32 @@
                                 <span class="acontecimiento">
                                     {% avatar item.user__username %}
                                         </span>
-                                        <span class="head"><a href="/profile/{{item.user__username}}">{{item.user__username}}</a>  <a class="fecha_" target="_blank">{{item.from_timeline__insertion_date}}</a><em></em></span>
+                                        <span class="head">
+                                            <a href="/profile/{{item.from_timeline__publication__author__username}}">{{item.from_timeline__publication__author__username}}</a>
+                                            <a class="fecha_" target="_blank">{{item.from_timeline__insertion_date}}</a><em></em>
+                                        </span>
                                         <div id="p" class="parrafo comment">
-                                                {{ item.from_timeline__content|replace_decorators|safe}}
+                                                {{ item.from_timeline__publication__content|replace_decorators|safe}}
                                         </div>
                                         <div class="contenidoadicional">
                                             <!--<img src="http://archive.eusa.eu/files/News/2012/photoc-camera_w2.jpg" title="random_photo" alt="random_photo">-->
                                         </div>
                                         <div class="controles">
                                             <ul>
+                                                <li class="fa fa-tag fa-lg"></li>
+                                                <li class="fa fa-reply fa-lg"></li>
+                                                <li class="fa fa-quote-left fa-lg"></li>
+                                                <li class="fa fa-heart fa-lg"></li>
+                                                <li title="No me gusta" class="fa-stack hate-with-values" id="fa-hate">
+                                                    <span class="hate-comment">
+                                                        <i class="fa fa-heart fa-stack-1x fa-lg hate-comment"></i>
+                                                        <i class="fa fa-bolt fa-stack-1x fa-lg fa-inverse"></i>
+                                                        <i class="fa hate-value"> {{ pub.hates }} </i>
+                                                    </span>
+                                                </li>
                                                 {% if user.username == user_profile.username %}
                                                 <li class="fa fa-trash fa-lg"></li>
                                                 {% endif %}
-                                                <li class="fa fa-heart fa-lg"></li>
-                                                <li class="fa fa-tag fa-lg"></li>
-                                                <li class="fa fa-quote-left fa-lg"></li>
                                             </ul>
                                         </div>
                                     </div>
