--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -72,7 +72,7 @@
                         {% if pub.hates > 0 %}
                             <li title="No me gusta" class="fa-stack hate-with-values" id="fa-hate">
                                 <span class="hate-comment">
-                                    <i class="fa fa-heart fa-stack-1x hate-comment"></i>
+                                    <i class="fa fa-heart fa-stack-1x"></i>
                                     <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
                                     <i class="fa hate-value"> {{ pub.hates }} </i>
                                 </span>
