--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -33,13 +33,14 @@
         <li id="loader"></li>
     </ul>
     </nav>
-    <script async src="{{STATIC_URL}}js/jquery.min.js"></script>
-    <script async src="{{STATIC_URL}}js/jquery-ui.js"></script>
-    <script async src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
-    <script async src="{{STATIC_URL}}js/jquery.gritter.js"></script>
-    <script async src="{{STATIC_URL}}js/profile.js"></script>
-    <script async src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
-    <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
+    <script async src="{{STATIC_URL}}js/jquery.min.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/jquery-ui.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/jquery.easytabs.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/jquery.hashchange.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/jquery.gritter.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/profile.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/jquery.colorbox.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
     <!-- Mentions -->
     <!--
@@ -50,4 +51,4 @@
 
     <link rel="stylesheet" href="{{STATIC_URL}}dist/sweetalert.css" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="{{STATIC_URL}}themes/google/google.css" onload="if(media!='all')media='all'">
-    <script async src="{{STATIC_URL}}dist/sweetalert.min.js"></script>
+    <script async src="{{STATIC_URL}}dist/sweetalert.min.js" type="text/javascript"></script>
