+ V2 + Añadir publicaciones al timeline (90%)

--- a/skyfolk/static/sass/timeline.sass
+++ b/skyfolk/static/sass/timeline.sass
@@ -46,7 +46,7 @@ $blueskyfolk: #1e88e5
     height: 30px
     font-family: 'Open Sans', sans-serif
     font-size: 20px
-    padding: 0px 5px
+    padding: 0 5px
     position: absolute
     color: white
     font-weight: 100
