--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -41,7 +41,7 @@
     height: 30px;
     font-family: "Open Sans", sans-serif;
     font-size: 20px;
-    padding: 0px 5px;
+    padding: 0 5px;
     position: absolute;
     color: white;
     font-weight: 100; }
