--- a/skyfolk/static/sass/timeline.sass
+++ b/skyfolk/static/sass/timeline.sass
@@ -172,7 +172,7 @@ $blueskyfolk: #1e88e5
     float: right
     left: 16px
     font-size: 1.1em
-  & .timeline-pub .second .controles ul .fa-heart i
+  & .timeline-pub .second .controles ul .fa-heart i, .fa-tag i
     font-size: 0.855em
     position: relative
     float: right
