--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -93,7 +93,7 @@
                        <li title="Citar" class="quote-comment"><i class="fa fa-quote-left">
                        </i></li>
                        <li title="Responder" class="reply-comment"><i class="fa fa-reply" id="reply-caja-comentario-{{ pub.pk }}"></i></li>
-                       <li title="Añadir a mi timeline" class="add-timeline"><i class="fa fa-tag"></i></li>
+                       <li title="Añadir a mi timeline" class="add-timeline"><i class="fa fa-tag">{{ pub.id|total_shares }}</i></li>
                     </ul>
                 </div>
                 </article>
