--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -69,12 +69,13 @@
                         {% elif user.is_authenticated and user.username == user_profile.username %} <!-- Si estamos visitando nuestro propio perfil -->
                              <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
                         {% endif %}
-                        {% if pub.hates > 0 %}
+                        {% with hates=pub.id|total_hates %}
+                        {% if hates > 0 %}
                             <li title="No me gusta" class="fa-stack hate-with-values" id="fa-hate">
                                 <span class="hate-comment">
                                     <i class="fa fa-heart fa-stack-1x"></i>
                                     <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
-                                    <i class="fa hate-value"> {{ pub.hates }} </i>
+                                    <i class="fa hate-value">{{ hates }}</i>
                                 </span>
                             </li>
                         {% else %}
@@ -85,15 +86,12 @@
                                 </span>
                             </li>
                         {% endif %}
-                        {% if pub.likes > 0 %}
-                            <li title="¡Me gusta!" class="like-comment"><i id="like-heart" class="fa fa-heart">{{ pub.likes }}</i></li>
-                        {% else %}
-                            <li title="¡Me gusta!" class="like-comment"><i id="like-heart" class="fa fa-heart"></i></li>
-                        {% endif %}
+                    {% endwith %}
+                        <li title="¡Me gusta!" class="like-comment"><i id="like-heart" class="fa fa-heart">{{ pub.id|total_likes }}</i></li>
                        <li title="Citar" class="quote-comment"><i class="fa fa-quote-left">
                        </i></li>
                        <li title="Responder" class="reply-comment"><i class="fa fa-reply" id="reply-caja-comentario-{{ pub.pk }}"></i></li>
-                       <li title="Añadir a mi timeline" class="add-timeline"><i class="fa fa-tag">{{ pub.id|total_shares }}</i></li>
+                       <li title="Añadir a mi timeline" class="add-timeline"><i class="fa fa-tag"> {{ pub.id|total_shares }}</i></li>
                     </ul>
                 </div>
                 </article>
